# coder-cli

./: .gitignore  Cargo.toml  plan.md
src/: agent.rs  llm_client.rs  main.rs  session.rs  tool_registry.rs  types.rs  utils.rs
src/mocks/: mock_llm_client.rs  mod.rs
src/tests/: agent_tests.rs  mod.rs  session_tests.rs  tool_tests.rs
src/tools/: approval.rs  ask_orackle.rs  edit_file.rs  insert_in_file.rs  list_dir.rs  mod.rs  read_file.rs  run_shell.rs  search_in_file.rs  write_file.rs
src/ui/: mod.rs
