[package]
name = "coder"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.39", features = ["rt-multi-thread", "macros"] }
reqwest = { version = "0.12", features = ["json", "blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wait-timeout = "0.2"
regex = "1"
walkdir = "2"
futures = "0.3"
anyhow = "1.0"
