[package]
name = "coder"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.39", features = ["rt-multi-thread", "macros"] }
reqwest = { version = "0.12", features = ["json", "stream", "http2", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wait-timeout = "0.2"
regex = "1"
walkdir = "2"
futures = "0.3"
anyhow = "1.0"
chrono = {version = "0.4.42", features = ["serde"]}
uuid = { version = "1", features = ["v4"] }

async-trait = "0.1"
ratatui = "0.28"
crossterm = "0.28"

[dev-dependencies]
mockall = "0.12"
tempfile = "3.8"
tokio-test = "0.4"
